@@ -46,6 +46,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
     
+    HAMA-268: Implement BSPMaster's all methods extended 
+                from JobSubmissionProtocol (hyunsik via edwardyoon)
     HAMA-295: Removing HBase dependency (edwardyoon)
     HAMA-294: Change log level of "Got heartbeatResponse.." messages
                 to debug (edwardyoon)
